--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,9 +3,9 @@ micronaut:
     name: training-micronaut
 datasources:
   default:
-    url: jdbc:mysql://192.168.31.151:3306/training
+    url: jdbc:mysql://localhost:3306/db
     driverClassName: com.mysql.cj.jdbc.Driver
     username: root
-    password: '123456'
+    password: 'password'
     schema-generate: CREATE_DROP
     dialect: MYSQL
